@@ -1,4 +1,8 @@
 FFmpegThumbnailer
+version 2.?.?
+- New default linker flags
+- Use gio in stead of obsolete gnome-vfs for file uris
+
 version 2.0.4
 - Fixed undefined references when compiling with certain LDFLAGS
 
